src/objects/Publication_Daily_Issue_Data__c.object
<CustomObject>
    <fields>
        <fullName>Consolidation_Date__c</fullName>
        <label>Consolidation Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Daily_Page_Value__c</fullName>
        <formula>0</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Daily Page Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Order_Closed_Date__c</fullName>
        <label>Order Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Order_Closed_Indicator__c</fullName>
        <label>Order Closed Indicator</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Pagination__c</fullName>
        <label>Pagination</label>
        <precision>9</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Publication_Code__c</fullName>
        <label>Publication Code</label>
        <length>4</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Date__c</fullName>
        <label>Publication Issue Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Publication_Issue_Number__c</fullName>
        <label>Publication Issue Number</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipLabel>Publication Daily Issue Data</relationshipLabel>
        <relationshipName>Publication_Daily_Issue_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Publication Daily Issue Data</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Consolidation_Date__c</columns>
        <columns>Pagination__c</columns>
        <columns>Order_Closed_Date__c</columns>
        <columns>Order_Closed_Indicator__c</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Today_s_Data</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Consolidation_Date__c</columns>
        <columns>Pagination__c</columns>
        <columns>Order_Closed_Date__c</columns>
        <columns>Order_Closed_Indicator__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Publication_Issue_Date__c</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s  Data</label>
    </listViews>
    <listViews>
        <fullName>ehview</fullName>
        <columns>NAME</columns>
        <columns>Publication__c</columns>
        <columns>Publication_Code__c</columns>
        <columns>Publication_Issue_Date__c</columns>
        <columns>Publication_Issue_Number__c</columns>
        <columns>Consolidation_Date__c</columns>
        <columns>Pagination__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>ehview</label>
    </listViews>
    <nameField>
        <label>Publication Daily Issue Data</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Publication Daily Issue Data</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>